# gate_bin_renderer_cpp

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: gate_bin_renderer.yaml
include/gate_bin_renderer_cpp/: camera_presets.hpp  frame_transforms.hpp  gate_render.hpp  math3.hpp  renderer.hpp
launch/: gate_bin_renderer.launch.py
rviz/: gate_mask.rviz  gate_scene.rviz
scripts/: gen_golden.py  itest_node.py  itest_scene.py  verify_parity.py
src/: camera_presets.cpp  gate_bin_renderer_node.cpp  gate_render_cli.cpp  render_cpu.cpp  render_cuda.cu
test/golden/: cases.txt  meta.json
